[project]
name = "langgraph-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.26",
    "langchain>=0.3.19",
    "langchain-aws>=0.2.13",
    "langchain-community>=0.3.18",
    "langgraph>=0.2.74",
    "python-dotenv>=1.0.1",
]
